--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-updates": "~0.5.4",
     "global": "^4.4.0",
     "json-server": "^0.16.3",
+    "lottie-react-native": "3.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
