--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "web": "expo start --web",
     "start": "react-native start",
     "test": "jest",
-    "server": "npx json-server --watch ./src/services/server.json ---delay 700"
+    "server": "npx json-server --watch ./src/services/server.json  ---host 192.168.1.103 ---delay 700"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.0",
+    "@nozbe/watermelondb": "0.22.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "date-fns": "^2.23.0",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.1.2",
@@ -36,10 +37,12 @@
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-decorators": "^7.15.4",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-native-calendars": "^1.1264.2",
