--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/archivo": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.0",
     "@nozbe/watermelondb": "0.22.0",
+    "@react-native-community/netinfo": "6.0.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.4",
@@ -19,6 +20,7 @@
     "expo": "~41.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.1.0",
+    "expo-image-picker": "~10.1.4",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
     "global": "^4.4.0",
@@ -28,6 +30,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-calendars": "^1.1266.0",
+    "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.1.0",
